data/derived/sp14/progs/unify/prog2653.ml.out
Characters 115-132:
  | h :: t -> bigAdd( (mulByDigit h l') l') in
                      ^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
